# volumetric-lighting

./: .gitignore  Cargo.toml  build.sh  index.html
assets/: index.js  jsScript.js  loadWasm.js  loadWreScript.js  ray.js  scene.js  transform.js  wre.js
assets/pkg/: wre_wasm.js  wre_wasm_bg.wasm
assets/pkg/snippets/wre-dd34bbe426ca6729/assets/: entity.js  loadWreScript.js  world.js  wre.js
assets/pkg/snippets/wre-dd34bbe426ca6729/assets/wre-js/: wreScript.js
assets/user-scripts/: BoardManager.js  boards.js  circleLight.js  lightManager.js  moveTest.js  placeToken.js  spinMonkey.js
assets/wre-js/: resource.js  shader.js  wreScript.js
resources/models/: banner.mtl  board.blend  board.blend1  board_segment.mtl  chamber.blend  chamber.blend1  judge_box.mtl  pedestal.mtl  plane.mtl  railing.mtl  sky_sphere.mtl  small_sphere.mtl  suzanne.mtl  textured-cube.mtl  torches.mtl
resources/scenes/: chamber.json  easy.json  new-format.json  test-halos.json  test.json
resources/shaders/: colorblur.frag  colorblur.vert  default.frag  default.vert  default2.frag  default2.vert  emissive.frag  phong_forward.frag  phong_forward.vert  phong_volumetric.frag  unlit.frag  unlit.vert  volumetric.frag
src/: camera.rs  entity.rs  entity_manager.rs  frame.rs  frame_buffer.rs  frame_timer.rs  lib.rs  lib_example.rs  light.rs  macros.rs  main.rs  main_non_wasm.rs  material.rs  mesh.rs  render_system.rs  resources.rs  scene.rs  script_manager.rs  shader.rs  state.rs  texture.rs  time.rs  traits.rs  transform.rs  window.rs
