[package]
name = "wre"
version = "0.1.0"
authors = ["Bridger Herman"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "wre_wasm"

[dependencies]
wasm-bindgen = "0.2.51"
js-sys = "0.3.28"
base64 = "0.10"
png = "0.14"
wasm-logger = {git = "https://github.com/bridger-herman/wasm-logger.git"}
log = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]
